2013-07-25  Glenn Morris  <rgm@gnu.org>

	* dired-x.el (dired-mark-extension): Convert comment to doc string.

2013-07-25  Juanma Barranquero  <lekktu@gmail.com>

	* desktop.el (desktop--make-frame): Do not pass the `fullscreen'
	parameter to modify-frame-parameters if the value has not changed;
	this is a workaround for bug#14949.
	(desktop--make-frame): On cl-delete-if call, check parameter name,
	not full parameter.

2013-07-24  Juanma Barranquero  <lekktu@gmail.com>

	* desktop.el (desktop-restoring-frames-p): Return a true boolean.
	(desktop-restore-frames): Warn when deleting an existing frame failed.

2013-07-24  Glenn Morris  <rgm@gnu.org>

	* ffap.el (ffap-machine-p): Handle "not known" response.  (Bug#14929)

2013-07-24  Michael Albinus  <michael.albinus@gmx.de>

	* filenotify.el (file-notify-supported-p):
	* net/tramp-sh.el (tramp-sh-handle-file-notify-supported-p):
	Remove functions.

	* autorevert.el (auto-revert-use-notify):
	(auto-revert-notify-add-watch):
	* net/tramp.el (tramp-file-name-for-operation):
	* net/tramp-adb.el (tramp-adb-file-name-handler-alist):
	* net/tramp-gvfs.el (tramp-gvfs-file-name-handler-alist):
	* net/tramp-sh.el (tramp-sh-file-name-handler-alist):
	* net/tramp-smb.el (tramp-smb-file-name-handler-alist):
	Remove `file-notify-supported-p' entry.

2013-07-24  Glenn Morris  <rgm@gnu.org>

	* printing.el: Replace all uses of deleted ps-windows-system,
	ps-lp-system, ps-flatten-list with lpr- versions.

2013-07-24  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/pcase.el (pcase--u1): Verify if self-quoting values can be
	checked with memq (bug#14935).

	* files.el (revert-buffer-function): Use a non-nil default.
	(revert-buffer-preserve-modes): Declare var to
	provide access to the `preserve-modes' argument.
	(revert-buffer): Let-bind it.
	(revert-buffer--default): New function, extracted from revert-buffer.

2013-07-24  Stefan Monnier  <monnier@iro.umontreal.ca>

	* lpr.el: Signal print errors more prominently.